Fix z-index of overlays and button paddings

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -102,6 +102,7 @@ html, body {
     right    : 0;
     top      : 0;
     bottom   : 0;
+    z-index  : 5;
 }
 
 .DialogContent {
@@ -111,7 +112,7 @@ html, body {
     top        : 0;
     bottom     : 0;
     margin     : auto;
-    overflow   : none;
-    z-index    : 1;
+    overflow   : hidden;
+    z-index    : 6;
     box-shadow : 0 10px 24px 4px rgba(0, 0, 0, 0.25);
 }
